fixes and translations